catalog-backend/src/main/openshift/catalog-backend-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    jkube.eclipse.org/git-commit: 8f91c29ae2fd7dc505f52965819e4a0c178bead7
    jkube.eclipse.org/git-url: git@gsosub.rhgls.com:jzuriaga/ex288-apps-catalog-backend.git
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: git@gsosub.rhgls.com:jzuriaga/ex288-apps-catalog-backend.git
    jkube.eclipse.org/git-branch: main
  labels:
    app: catalog-backend
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.example.repartman
  name: catalog-backend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: catalog-backend
    provider: jkube
    group: com.example.repartman
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        jkube.eclipse.org/git-commit: 8f91c29ae2fd7dc505f52965819e4a0c178bead7
        jkube.eclipse.org/git-url: git@gsosub.rhgls.com:jzuriaga/ex288-apps-catalog-backend.git
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-uri: git@gsosub.rhgls.com:jzuriaga/ex288-apps-catalog-backend.git
        jkube.eclipse.org/git-branch: main
      labels:
        app: catalog-backend
        provider: jkube
        version: 1.0.0-SNAPSHOT
        group: com.example.repartman
      name: catalog-backend
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: DATABASE_HOST
          value: catalogdb
        image: catalog-backend:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          successThreshold: 1
        name: quarkus
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          successThreshold: 1
        securityContext:
          privileged: false
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/started
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          successThreshold: 1
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - quarkus
      from:
        kind: ImageStreamTag
        name: catalog-backend:latest
    type: ImageChange
